--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <img src="myimg.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Vayalapalli Keerthana and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Vayalapalli Keerthana and I'm a Pro dancer <span class="typing-2"></span></div>
                     <p>I'm Vayalapalli Keerthana, an CSE student specializing in web development, proficient in HTML and CSS. I run the "Aapke coder" YouTube channel, where I share knowledge regarding about programming. I'm passionate about technology and knowledge sharing, always seeking new opportunities to learn and collaborate. Explore my portfolio to see my work!</p>
                     <a href="KEERTHANA_VAYALAPALLI.pdf">Download CV</a>
                 </div>
