--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
         </div>
     </section>
 
+    <div class="">
+        Namaste Na kanna thopu ytber meeku kanipincharu bros!!
+    </div>
+
     <!-- services section start -->
     <section class="services" id="services">    
         <div class="max-width">
