--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
     <div class="">
         Namaste Na kanna thopu ytber meeku kanipincharu bros!!
+        adukundam manam
     </div>
 
     <!-- services section start -->
