chala baga adukunnam

--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
             </div>
         </div>
     </section>
-a sdfgsdafgasdf
+
+    <div class="">
+        Namaste Na kanna thopu ytber meeku kanipincharu bros!!
+        daridram eppudu panicheyyav
+    </div>
+
     <!-- services section start -->
     <section class="services" id="services">    
         <div class="max-width">
